cmake_minimum_required(VERSION 3.7)
project(stn)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        jni/com_tencent_mars_stn_StnLogic_C2Java.cc
        jni/com_tencent_mars_stn_StnLogic_Java2C.cc
        proto/longlink_packer.cc
        proto/longlink_packer.h
        proto/shortlink_packer.cc
        proto/shortlink_packer.h
        proto/stnproto_logic.h
        src/anti_avalanche.cc
        src/anti_avalanche.h
        src/dynamic_timeout.cc
        src/dynamic_timeout.h
        src/flow_limit.cc
        src/flow_limit.h
        src/frequency_limit.cc
        src/frequency_limit.h
        src/longlink.cc
        src/longlink.h
        src/longlink_connect_monitor.cc
        src/longlink_connect_monitor.h
        src/longlink_identify_checker.cc
        src/longlink_identify_checker.h
        src/longlink_speed_test.cc
        src/longlink_speed_test.h
        src/longlink_task_manager.cc
        src/longlink_task_manager.h
        src/net_channel_factory.cc
        src/net_channel_factory.h
        src/net_check_logic.cc
        src/net_check_logic.h
        src/net_core.cc
        src/net_core.h
        src/net_source.cc
        src/net_source.h
        src/netsource_timercheck.cc
        src/netsource_timercheck.h
        src/shortlink.cc
        src/shortlink.h
        src/shortlink_interface.h
        src/shortlink_task_manager.cc
        src/shortlink_task_manager.h
        src/signalling_keeper.cc
        src/signalling_keeper.h
        src/simple_ipport_sort.cc
        src/simple_ipport_sort.h
        src/smart_heartbeat.cc
        src/smart_heartbeat.h
        src/special_ini.h
        src/task_profile.cc
        src/timing_sync.cc
        src/timing_sync.h
        src/zombie_task_manager.cc
        src/zombie_task_manager.h
        test_cases/anti_avalanche_test.cc
        test_cases/hostorder_test.cc
        test_cases/longlink_connect_monitor_test.cc
        test_cases/longlink_task_manager_test.cc
        test_cases/longlink_test.cc
        test_cases/mock_server_controlutil.h
        test_cases/net_core_test.cc
        test_cases/net_source_test.cc
        test_cases/shortlink_ipswitch_test.cc
        test_cases/signalling_keeper_test.cc
        test_cases/smart_heartbeat_test.cc
        test_cases/test_constants.h
        test_cases/util_func.h
        test_cases/whole_test.cc
        test_support_mock/comm_mock.cc
        test_support_mock/mock_callback_logic.cc
        test_support_mock/network_mock.cc
        test_support_mock/platform_logic.cc
        config.h
        dns_profile.h
        stn.cc
        stn.h
        stn_logic.cc
        stn_logic.h
        task_profile.h)

add_executable(stn ${SOURCE_FILES})